# cob_vision_ptam_monoslam

./: CMakeLists.txt  README  manifest.xml
CMakeModules/: FindG2O.cmake  FindG2O.cmake~  FindOpenCV.cmake  FindOpenCV.cmake~
common/include/: anchored_points.h  backend.h  data_structures.h  errorf.h  fast_grid.h  filegrabber.h  frame_grabber.hpp  global.h  global.h~  matcher.hpp  mono_frontend.h  pose_optimizer.h  proj.h  quadtree.h  quadtree.h~  rgbd_grabber.h  rgbd_line.h  slam_graph.hpp  stereo_frontend.h  timer.h  transformations.h  utilities.h
common/src/: BoFSIFT.cpp  anchored_points.cpp  backend.cpp  create_dictionary.cpp  dataset_builder.cpp  dataset_builder.h  dump_rgbd.cpp  error_record.cpp  errorf.cpp  fast_grid.cpp  filegrabber.cpp  frame_grabber-impl.cpp  frame_grabber.cpp  matcher.cpp  mixture_recovery.cpp  mono_frontend.cpp  mono_matcher.cpp  mono_slam.cpp  placerecognizer.cpp  placerecognizer.cpp~  point_cloud_server.cpp  random_tree_rgbd.cpp  rgbd_grabber.cpp  rgbd_line.cpp  rgbd_line.h  slam_graph-impl.cpp  slam_graph.cpp  stereo_camera.cpp  stereo_frontend.cpp  stereo_slam.cpp  test.cpp
launch/: err.launch~  err_rec.launch  feature_test.launch  feature_test.launch~  mono.launch  mono.launch~  stereo.launch  stereo.launch~
srv/: point_cloud_server.srv  point_cloud_server.srv~
